crates/typecheck/tests/fixtures/errors/unary_op_mismatch.ax
fn main() { val x = -true }
